# ugar-io-opengl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-desktop.yml
Ugar.io OpenGL/: Color.cpp  Color.h  GLBasics.cpp  GameWindow.cpp  GameWindow.h  RectF.cpp  RectF.h  Ugar.io OpenGL.vcxproj  camera.cpp  camera.h  food.cpp  food.h  game.cpp  game.h  line.cpp  line.h  ugar.cpp  ugar.h  ugarai.cpp  ugarai.h  ugarplayer.cpp  ugarplayer.h
docs/: ugario_gameplay.mov
include/ugar_io_opengl/: Color.h  GLBasics.h  GameWindow.h  RectF.h  Vector2.h  camera.h  food.h  game.h  line.h  ugar.h  ugarai.h  ugarplayer.h
resources/: Ugar.io OpenGL.rc
src/: Color.cpp  GLBasics.cpp  GameWindow.cpp  RectF.cpp  Vector2.cpp  camera.cpp  food.cpp  game.cpp  line.cpp  main.cpp  ugar.cpp  ugarai.cpp  ugarplayer.cpp
